--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "step-1:nxt:run": "sh ./nxt/run.sh",
-    "step-1:nxt:delete": "rm -rf nxt"
+    "step-1:nxt:delete": "rm -rf nxt",
+    "step-2:start": "node index.js"
   },
   "repository": {
     "type": "git",
