--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "bluebird": "^3.5.1",
     "inquirer": "^5.1.0",
-    "node-cmd": "^3.0.0"
+    "node-cmd": "^3.0.0",
+    "replace-in-file": "^3.4.0"
   }
 }
